--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,7 +39,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/activities.json
-    - assets/destinations.json
-    - assets/logo.svg
-    - assets/user.jpg
+    - assets/json/destinations.json
+    - assets/icons/logo.svg
+    - assets/images/user.jpg
